docs(readme): align README with current v1 runtime geometry state